# Point_image_fusion

./: .gitignore  README.md
arcgis/: map.aprx  s01.qgz  s02.qgz  sign.stylx
arcgis/MyProject15/: MyProject15.aprx  MyProject15.atbx
arcgis/MyProject15/GpMessages/: 1890682461166  5080557293416  5769796797416  6819981228583  6905670495375  7132151956166
arcgis/MyProject15/MyProject15.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000003.gdbtablx  a00000004.gdbtable  (+18 more)
data/: add_cover.py  generate_img.py  generate_streetview copy.py  generate_streetview.py  sep_trainval.py  test.ipynb  testtopng.py  toCOCO copy.py  toCOCO.ipynb  toCOCO.py  todataset.py  topng.py  topng_noback.py
fusion/:  euclidean_cluster.py   euclidean_cluster_full.py   euclidean_cluster_full_txt.py   euclidean_cluster_txt_addint.py  bin2txt.py  center.py  findpcd.py  getgps.py  gps.ipynb  points_extract.py  proj_trans.py  test.ipynb  test.pcd  test.ply  transindensity.py  txt2las.py
fusion/.ipynb_checkpoints/: pose.ipynb
fusion/c++/: CMakeLists.txt
fusion/c++/src/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  convert.cpp
fusion_test/:  euclidean_cluster.ipynb  addrgb.py  bin_to_pcd.ipynb  bin_to_pcd.py  reproject.ipynb  reproject.py  reproject1 copy 2.ipynb  test - Cloud.pcd  test.ipynb
yolov5/: detect.py  train.py  tutorial.ipynb
yolov5/data/: VOC.yaml  VOC_GTSRB.yaml
yolov5/models/: yolov5s_GTSRB.yaml
yolov5/utils/: dataloaders.py  plots.py
(+3 files in other folders)
